--- a/ui/index.html
+++ b/ui/index.html
@@ -175,7 +175,7 @@
 
     <script>
         // base URL for the API
-        const baseUrl = 'http://127.0.0.1:5000/employees';
+        const baseUrl = 'http://0.0.0.0:5000/employeesinfo';
 
         // Add event listeners for the buttons
         document.getElementById('createButton').addEventListener('click', showCreateEmployeeForm);
